[gd_scene load_steps=9 format=3 uid="uid://ygarkdl44isq"]

[ext_resource type="Script" path="res://scritps/inventory.gd" id="1_475kn"]
[ext_resource type="PackedScene" uid="uid://dvdgqxmph0n7p" path="res://scenes/slot.tscn" id="2_lw2y8"]
[ext_resource type="Texture2D" uid="uid://c2cx6p4mn63yr" path="res://assets/art/ui/board.png" id="2_n5nnt"]
[ext_resource type="Texture2D" uid="uid://c1ddcdafiqtmd" path="res://assets/art/ui/sheet.png" id="4_v6nqb"]
[ext_resource type="Texture2D" uid="uid://dp85d8q4i01hs" path="res://assets/art/boya_1.png" id="4_ve43i"]
[ext_resource type="Texture2D" uid="uid://bw45yj27o02qp" path="res://assets/art/wall.png" id="5_t0fen"]
[ext_resource type="Texture2D" uid="uid://bjgkxr7e50lx0" path="res://assets/art/trap.png" id="7_5fwlt"]
[ext_resource type="Texture2D" uid="uid://dgsf5jgxlvp01" path="res://assets/art/ui/sing.png" id="7_f8oo8"]

[node name="inventory" type="Control"]
custom_minimum_size = Vector2(237, 189)
layout_mode = 3
anchors_preset = 0
offset_right = 349.0
offset_bottom = 279.0
script = ExtResource("1_475kn")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -37.0
offset_right = 710.0
offset_bottom = 92.0
texture = ExtResource("2_n5nnt")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Inventory" type="GridContainer" parent="NinePatchRect"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.27
anchor_top = 0.5
anchor_right = 0.27
anchor_bottom = 0.5
offset_left = 79.49
offset_top = -24.5
offset_right = 251.49
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 122
theme_override_constants/v_separation = 14
columns = 3

[node name="slot" parent="NinePatchRect/Inventory" instance=ExtResource("2_lw2y8")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="background" parent="NinePatchRect/Inventory/slot" index="0"]
position = Vector2(-20.73, -16)
scale = Vector2(0.938, 0.938)
texture = ExtResource("4_v6nqb")

[node name="item" parent="NinePatchRect/Inventory/slot/CenterContainer/Panel" index="0"]
position = Vector2(1, -5)
texture = ExtResource("4_ve43i")

[node name="Label" parent="NinePatchRect/Inventory/slot/CenterContainer/Panel" index="1"]
text = "2000
"

[node name="slot2" parent="NinePatchRect/Inventory" instance=ExtResource("2_lw2y8")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="background" parent="NinePatchRect/Inventory/slot2" index="0"]
position = Vector2(-15.73, -14)
scale = Vector2(0.89094, 0.89094)
texture = ExtResource("4_v6nqb")

[node name="item" parent="NinePatchRect/Inventory/slot2/CenterContainer/Panel" index="0"]
position = Vector2(-4.76837e-06, 1.66893e-06)
scale = Vector2(0.810975, 0.810975)
texture = ExtResource("5_t0fen")

[node name="Label" parent="NinePatchRect/Inventory/slot2/CenterContainer/Panel" index="1"]
text = "250"

[node name="slot3" parent="NinePatchRect/Inventory" instance=ExtResource("2_lw2y8")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="background" parent="NinePatchRect/Inventory/slot3" index="0"]
position = Vector2(-11.73, -13)
scale = Vector2(0.870588, 0.870588)
texture = ExtResource("4_v6nqb")

[node name="item" parent="NinePatchRect/Inventory/slot3/CenterContainer/Panel" index="0"]
position = Vector2(3.00865, -3.25)
scale = Vector2(0.715909, 0.715909)
texture = ExtResource("7_5fwlt")

[node name="Label" parent="NinePatchRect/Inventory/slot3/CenterContainer/Panel" index="1"]
text = "500"

[node name="FloatingItem" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = -11.0
offset_top = -40.0
offset_right = 29.0

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(348, -539)
texture = ExtResource("7_f8oo8")

[connection signal="pressed" from="NinePatchRect/Inventory/slot" to="." method="_on_slot_pressed"]
[connection signal="pressed" from="NinePatchRect/Inventory/slot2" to="." method="_on_slot_2_pressed"]
[connection signal="pressed" from="NinePatchRect/Inventory/slot3" to="." method="_on_slot_3_pressed"]

[editable path="NinePatchRect/Inventory/slot"]
[editable path="NinePatchRect/Inventory/slot2"]
[editable path="NinePatchRect/Inventory/slot3"]
